# CCDB

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
Docs/: INFO_BIN  INFO_SRC
dbug/: factorial  output2.r  output3.r  output4.r  output5.r  tests  user.ps  user.t
extra/: innochecksum
include/: config.h  mysql_version.h  mysqld_ername.h  mysqld_error.h  sql_state.h
libmysql/: libmysql_exports_file.cc
libmysqld/: CMakeLists.txt  libmysqld_exports_file.cc
mysql-test/collections/: default.release.done
mysys/: thr_lock
packaging/rpm-uln/: mysql.10.0.4.spec
scripts/: comp_sql  make_binary_distribution  mysql_config  mysql_fix_privilege_tables.sql  mysql_fix_privilege_tables_sql.c  mysql_install_db  mysql_secure_installation  mysqlaccess  mysqlbug  mysqld_multi  mysqld_safe
sql/: CMakeLists.txt  gen_lex_hash  lex.h  lex_hash.h  mysql_tzinfo_to_sql  mysqld.cc  sql_builtin.cc  sql_cmd.h  sql_parse.cc  sql_show.cc  sql_show.h  sql_yacc.cc  sql_yacc.h  sql_yacc.yy
sql/share/bulgarian/: errmsg.sys
sql/share/czech/: errmsg.sys
sql/share/danish/: errmsg.sys
storage/csv/: CMakeLists.txt  apidocu.text  ccdb.h  ccdb_locking.cc  db  ha_tina.cc  ha_tina.cc.herbert  ha_tina.cc.work  ha_tina.h
storage/perfschema/: gen_pfs_lex_token  pfs_lex_token.h
support-files/: MySQL-shared-compat.spec  mysql.server
unittest/examples/: no_plan-t  simple-t  skip-t  skip_all-t  todo-t
unittest/mysys/: base64-t  bitmap-t  my_atomic-t  my_malloc-t  my_rdtsc-t  my_vsnprintf-t
unittest/sql/: my_apc-t
unittest/strings/: strings-t
(+23 files in other folders)
